# json-rm

./: LICENSE  README.md  pyproject.toml
examples/custom_formatter/: custom_formatter_example.py
examples/postgres/: postgres_example.py
examples/spark/: spark_example.py
resources/data/: data_1.2.246.537.6.1506.7000.2022.1.10.json
resources/schemas/: 1.2.246.537.6.1506.7000.2022.1.10.json  basic.json
src/json_rm/: Attribute.py  Entity.py  JSONSchema.py  cli.py
src/json_rm/formatters/: __init__.py  postgres_formatter.py  simple_formatter.py  spark_formatter.py
src/yayson/: Entity.py  __init__.py  cli.py
src/yayson/formatters/: __init__.py  postgres_formatter.py  simple_formatter.py
