[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yayson"
version = "0.0.1"
authors = [{name="makes"}]
description = "Transpile JSON schemas into other textual representations."
readme = "README.md"
dependencies = ["jsonref", "typer"]
requires-python = ">=3.9"

[project.scripts]
jst = "yayson.cli:main"

[project.urls]
"Homepage" = "https://github.com/makes/json-schema-transcriber"
"Bug Tracker" = "https://github.com/makes/json-schema-transcriber/issues"
